<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="UsingOnClickInXml">


    <EditText
        android:focusable="false"
        android:textSize="36sp"
        android:textStyle="bold"
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="@dimen/edit_text_border_margin"
        android:layout_marginTop="@dimen/edit_text_border_margin"
        android:layout_marginEnd="@dimen/edit_text_border_margin"
        android:layout_marginBottom="@dimen/edit_text_border_margin"
        android:background="@drawable/edit_text_border_shape"
        android:hint="@string/edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="@dimen/edit_text_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_one"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_1"/>

            <Button
                android:id="@+id/btn_two"
                android:onClick="operationFunction"
                android:text="@string/button_2"
                style="@style/button_style"/>

            <Button
                android:id="@+id/btn_three"
                android:onClick="operationFunction"
                android:text="@string/button_3"
                style="@style/button_style"/>

            <Button
                android:id="@+id/btn_divide"
                android:onClick="operationFunction"
                android:text="@string/button_divide"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_four"
                android:onClick="operationFunction"
                android:text="@string/button_4"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_five"
                android:onClick="operationFunction"
                android:text="@string/button_5"
                style="@style/button_style"/>

            <Button
                android:id="@+id/btn_six"
                android:onClick="operationFunction"
                android:text="@string/button_6"
                style="@style/button_style"/>

            <Button
                android:id="@+id/btn_plus"
                android:onClick="operationFunction"
                android:text="@string/button_plus"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_seven"
                android:onClick="operationFunction"
                android:text="@string/button_7"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_eight"
                android:onClick="operationFunction"
                android:text="@string/button_8"
                style="@style/button_style"/>

            <Button
                android:id="@+id/btn_nine"
                android:onClick="operationFunction"
                android:text="@string/button_9"
                style="@style/button_style"/>

            <Button
                android:id="@+id/btn_minus"
                android:onClick="operationFunction"
                android:text="@string/button_minus"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:backgroundTint="@color/red"    
                android:id="@+id/btn_reset"
                android:onClick="operationFunction"
                android:text="@string/button_reset"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_zero"
                android:onClick="operationFunction"
                android:text="@string/button_0"
                style="@style/button_style"/>

            <Button
                android:id="@+id/btn_dot"
                android:onClick="operationFunction"
                android:text="@string/button_doubt"
                style="@style/button_style"/>

            <Button
                android:id="@+id/btn_equal"
                android:onClick="operationFunction"
                android:text="@string/button_equal"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"/>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
